--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DEBUG=1
+DEBUG=0
 SECRET_KEY=qwejAFNjwfnkqwjfbaskfW
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
 SQL_ENGINE=django.db.backends.postgresql
@@ -6,8 +6,11 @@ SQL_ENGINE=django.db.backends.postgresql
 TZ=Europe/Moscow
 PGTZ=Europe/Moscow
 
+POSTGRES_HOST_AUTH_METHOD=trust
+
 POSTGRES_DB=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=jetfork2022kack
-DB_HOST=127.0.0.1
+DB_HOST=0.0.0.0
 DB_PORT=5432
+DB_DOCKER_HOST=djangonetwork
