--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,4 +1,18 @@
 FROM python:3.9-buster
+
+ARG DB_DOCKER_HOST
+ARG DB_PORT
+ARG POSTGRES_DB
+ARG POSTGRES_USER
+ARG POSTGRES_PASSWORD
+#
+# ENV POSTGRES_DB=$POSTGRES_DB
+# ENV DB_DOCKER_HOST=$BUILD_VERSION
+# ENV DB_PORT=$DB_PORT
+# ENV POSTGRES_DB=$POSTGRES_DB
+# ENV POSTGRES_USER=$POSTGRES_USER
+# ENV POSTGRES_PASSWORD=$POSTGRES_PASSWORD
+
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 
@@ -18,3 +32,5 @@ WORKDIR /app
 COPY requirements.txt /app/
 RUN pip install -r requirements.txt
 COPY . /app/
+RUN python manage.py makemigrations
+RUN python manage.py migrate
