--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,5 +1,8 @@
 Django==4.0.6
-psycopg2==2.9.3
+# psycopg2==2.9.3
+psycopg2-binary
+sqlalchemy==1.4.39
+openpyxl==3.0.10
 
 #psycopg2-binary>=2.9.1
 
