--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -4,21 +4,24 @@ services:
   db:
     image: postgres:14.4-alpine
     volumes:
-      - type: bind
-        source: ./db/data/
-        target: /var/lib/postgresql/data/
+#      - type: bind
+#        source: ./db/data
+#        target: /var/lib/postgresql/data/
+      - ./db/data:/var/lib/postgresql/data/
     env_file:
-      - ./.env.prod
+      - app/.env.prod
     ports:
       - "${DB_PORT}:5432"
       
   app:
-    build: ./app
-    command: gunicorn hello_django.wsgi:application --bind 0.0.0.0:8000
+    build:
+      context: ./app
+      dockerfile: Dockerfile.prod
+    command: gunicorn hackathon.wsgi:application --bind 0.0.0.0:8000
     ports:
       - 8000:8000
     env_file:
-      - ./.env.prod
+      - app/.env.prod
     depends_on:
       - db
 
