--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,39 @@
 version: "3.9"
 
 services:
-  db:
-    image: postgres:14.4-alpine
-    env_file:
-      - ./.env
-    ports:
-      - "${DB_PORT}:5432"
-
   app:
-    build: ./app
-    command: python manage.py runserver localhost:8000
+    build:
+      context: ./app
+      args:
+        - DB_DOCKER_HOST=db
+        - DB_PORT=${DB_PORT}
+        - POSTGRES_DB=${POSTGRES_DB}
+        - POSTGRES_USER=${POSTGRES_USER}
+        - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    command: python manage.py runserver 0.0.0.0:8000
     ports:
-        - 8000:8000
+      - 8000:8000
     volumes:
-      - .:/code
-    env_file:
-      - ./.env
+      - ./app:/app
+    #    env_file:
+    #      - app/.env
     depends_on:
       - db
+    links:
+      - db:db
+    networks:
+      - djangonetwork
+    restart: always
+
+  db:
+    image: postgres:14.4-alpine
+    ports:
+      - 0.0.0.0:5432:5432
+    container_name: db
+    networks:
+      - djangonetwork
+    restart: always
+
+networks:
+  djangonetwork:
+    driver: bridge
