--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,21 +1,13 @@
+psycopg2==2.9.3
+psycopg2-binary==2.9.3
 Django==4.0.6
-# psycopg2==2.9.3
-psycopg2-binary
 sqlalchemy==1.4.39
 openpyxl==3.0.10
+pandas==1.4.3
 
-#psycopg2-binary>=2.9.1
-
-# openpyxl>=3.0.9
-#
-# multipledispatch==0.6.0
-# lightgbm==3.2.1
-# joblib==1.0.1
-# fasttext>=0.9.2
-# pandas>=1.3.4
-# numpy==1.19.5
-# scipy==1.7.1
-# scikit-learn>=0.23.2
-# pathlib
-#
-# fasttext-wheel
+catboost==1.0.6
+pandas==1.3.5
+fasttext==0.9.2
+nmslib==2.1.1
+razdel
+xlsxwriter==3.0.3
