--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ app/venv
 app/eprf/migrations
 
 app/resources/zipcodes/*
-app/resources/veds/*
+#app/resources/veds/*
 materials/*
 app/__pycache__
 app/hackathon/__pycache__/
