--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
 #    command: "python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
     command: >
       sh -c "python manage.py makemigrations &&
+             python manage.py makemigrations eprf &&
              python manage.py migrate &&
              python manage.py runserver 0.0.0.0:8000"
 #      python manage.py collectstatic --noinput &&
