--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -16,10 +16,10 @@ services:
   app:
     build:
       context: ./app
-      dockerfile: Dockerfile.prod
+      dockerfile: Dockerfile
     command: gunicorn hackathon.wsgi:application --bind 0.0.0.0:8000
     ports:
-      - 8000:8000
+      - 8800:8000
     env_file:
       - app/.env.prod
     depends_on:
