--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,26 +3,38 @@ version: "3.9"
 services:
   db:
     image: postgres:14.4-alpine
+    container_name: db
     volumes:
-#      - type: bind
-#        source: ./db/data
-#        target: /var/lib/postgresql/data/
       - ./db/data:/var/lib/postgresql/data/
     env_file:
-      - app/.env.prod
+      - .env
     ports:
-      - "${DB_PORT}:5432"
+      - 0.0.0.0:5432:5432
       
   app:
     build:
-      context: ./app
-      dockerfile: Dockerfile.prod
-    command: gunicorn hackathon.wsgi:application --bind 0.0.0.0:8000
+      context: app
+      args:
+        - DB_DOCKER_HOST=db
+        - DB_PORT=${DB_PORT}
+        - POSTGRES_DB=${POSTGRES_DB}
+        - POSTGRES_USER=${POSTGRES_USER}
+        - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+        - DEBUG=0
+    container_name: hack_app
+    command: >
+      sh -c "python manage.py makemigrations &&
+             python manage.py makemigrations eprf &&
+             python manage.py migrate &&
+             gunicorn --workers=2 hackathon.wsgi:application --bind 0.0.0.0:8000"
     ports:
-      - 8000:8000
-    env_file:
-      - app/.env.prod
+      - 8800:8000
+    volumes:
+      - ./app:/app
     depends_on:
       - db
+    links:
+      - db:db
+    restart: on-failure
 
 # docker-compose -f docker-compose.prod.yml up -d --build 
